Fix header formatting in security concepts document

--- a/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
@@ -1,4 +1,4 @@
-## 1.2.1 Confidentiality, integrity, and availability, authenticity, and nonrepudiation (5 Pillars of Information Security)
+## 1.2.1 Confidentiality, integrity, and availability, authenticity, and nonrepudiation
 
 The five pillars of information security are the principles that guide the design, implementation, and management of secure systems. Each one of the 5 pillars addresses an aspect of information security, ensuring that data and systems remain protected from various threats. Here's an explanation of each:
 1. **Confidentiality** ensures that information is accessible only to those authorized to access it. This means protecting data from unauthorized disclosure or access, whether intentional or accidental. Techniques such as encryption, access controls, and user authentication help maintain confidentiality by ensuring that sensitive information remains secure and inaccessible to unauthorized users.
