Simplify GRC timeline and update styling

--- a/DOMAIN1: Security and Risk Management/1.03 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: Security and Risk Management/1.03 Evaluate, apply, and sustain security governance principles.md
@@ -21,17 +21,22 @@ Below you can find a short timeline of GRC:
 
 ```mermaid 
 flowchart LR
-    T1["1990s:<br>Governance, risk, and compliance managed independently.<br>COSO and ISO 31000 frameworks emerge."]
-    T2["2002:<br>Enron and WorldCom scandals trigger SOX Act and demand for transparency."]
-    T3["2003–2007:<br>OCEG introduces the GRC framework to unify governance, risk, and compliance."]
-    T4["2010s:<br>Vendors release GRC platforms to automate controls and processes."]
-    T5["2020s+:<br>GRC evolves with AI and analytics into integrated risk management (IRM)."]
+    T1[1990s: Governance, risk, and compliance managed independently.]
+    T2[2002: Enron/WorldCom scandals trigger SOX Act.]
+    T3[2003-2007: OCEG introduces GRC framework.]
+    T4[2010s: GRC platforms automate controls.]
+    T5[2020s+: GRC evolves into Integrated Risk Management.]
 
-    T1 --> T2 --> T3 --> T4 --> T5
+    T1 --> T2
+    T2 --> T3
+    T3 --> T4
+    T4 --> T5
 
-    %% Styling: white background, grey text and border
-    classDef bwStyle fill:#ffffff,color:#444,stroke:#999;
-    class T1,T2,T3,T4,T5 bwStyle;
+    style T1 fill:#fff,stroke:#999,color:#444
+    style T2 fill:#fff,stroke:#999,color:#444
+    style T3 fill:#fff,stroke:#999,color:#444
+    style T4 fill:#fff,stroke:#999,color:#444
+    style T5 fill:#fff,stroke:#999,color:#444
 ```
 
 
