Fix link formatting for Sabsa site reference

--- a/DOMAIN1: Security and Risk Management/1.03 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: Security and Risk Management/1.03 Evaluate, apply, and sustain security governance principles.md
@@ -327,7 +327,7 @@ The following table summarizes the SABSA model’s core structure:
 | **Component Architecture**| System-specific implementations         | How is it implemented?        | Technology configurations and integration      |
 | **Operational Architecture**| Management and operations             | How is it managed?            | Processes, monitoring, and response plans      |
 
-:link: The Sabsa site  https://sabsa.org/ provides resources, training, certification, and information about the SABSA framework, a methodology for creating risk-driven, business-aligned security architectures.
+:link: The [Sabsa site](https://sabsa.org/) provides resources, training, certification, and information about the SABSA framework, a methodology for creating risk-driven, business-aligned security architectures.
 
 ### Open Questions ###
 1. Differentiate between acquisitions and mergers in the context of business operations.
