Fix link formatting in legal compliance document
Updated link formatting for copyright.gov reference.

--- a/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to infosec in a holistic context.md
+++ b/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to infosec in a holistic context.md
@@ -85,7 +85,7 @@ Intellectual property (IP) encompasses intangible assets like company names, cre
 
 :bulb: With the advancement of AI, intellectual property is evolving rapidly. Be prepared to encounter related questions in your exams and address it in your cybersecurity career.
 
-:link: Take some time to give a look at: https://www.copyright.gov/
+:link: Take some time to give a look at: [https://www.copyright.gov/](https://www.copyright.gov/)
 
 The Digital Millennium Copyright Act (DMCA) is a comprehensive United States copyright law enacted in 1998 to address copyright issues arising from the rapid growth of the internet and digital technologies. It criminalizes the production and dissemination of technology, devices, or services intended to circumvent measures that control access to copyrighted works, as well as the act of circumventing such measures. Additionally, the DMCA provides safe harbors from liability for internet service providers and online platforms that host user-generated content, as long as they comply with certain requirements, including implementing a notice-and-takedown procedure for addressing copyright infringement claims.
 
