Refine flowchart for Data Classification Program
Updated the flowchart in the Data Classification Program section to ensure clarity and consistency in the steps outlined.

--- a/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
+++ b/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
@@ -80,15 +80,19 @@ Here are some key steps in building a robust data classification program:
 
 ```mermaid
 flowchart LR
-  A[Start: Establish Data Classification Program] --> B[Define Classification Levels]
-  B --> C[Establish Data Ownership]
-  C --> D[Develop Classification Procedures]
-  D --> E[Implement Security Controls]
-  E --> F[Train & Educate Employees]
-  F --> G[Maintain & Review Programme]
+    A[Start: Establish Data Classification Program] --> B[Define Classification Levels]
+    B --> C[Establish Data Ownership]
+    C --> D[Develop Classification Procedures]
+    D --> E[Implement Security Controls]
+    E --> F[Train & Educate Employees]
+    F --> G[Maintain & Review Programme]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    %% Assigning classes to the nodes
+    class A center
+    class B,C,D,E,F,G node
 ```
 
 **Data Categorization** comes before Data Classification and focuses on grouping data based on its inherent content, purpose, or characteristics. For example, you might categorize data into types like "financial records," "employee records," "customer data," or "transaction logs." The goal of data categorization is to organize the data in a way that makes sense for the organization, so that it can be better managed and analyzed. It doesn't necessarily involve sensitivity or security at this point; it's more about understanding and grouping the data for practical use.
