Revise DLP flowchart and enhance asset labeling section
Updated the DLP system flowchart to improve clarity and added labeling techniques for asset security.

--- a/DOMAIN2: Asset Security/2.02 Establish information and asset handling requirements.md
+++ b/DOMAIN2: Asset Security/2.02 Establish information and asset handling requirements.md
@@ -6,24 +6,28 @@ Data loss prevention (DLP) systems play a crucial role in detecting and blocking
 
 ```mermaid
 flowchart LR
-  A[DLP System] --> B[Identify Sensitive Data Patterns<br> -e.g. SSNs, Credit Cards]
-  B --> C{Policy Enforcement & Detection}
-  
-  C --> D[Network‑based DLP]
-  C --> E[Endpoint‑based DLP]
-  
-  D --> D1[Scans data in motion across network]
-  D1 --> D2[Blocks attempts to exfiltrate via email/web/uploads]
-  
-  E --> E1[Installed on user devices]
-  E1 --> E2[Monitors printers, USB drives, clipboard, file transfers]
-  E2 --> E3[Stops unauthorized local exfiltration attempts]
+    A[DLP System] --> B["Identify Sensitive Data Patterns<br/>(e.g., SSNs, Credit Cards)"]
+    B --> C{Policy Enforcement & Detection}
+    
+    C --> D[Network-based DLP]
+    C --> E[Endpoint-based DLP]
+    
+    D --> D1["Scans data in motion<br/>across network"]
+    D1 --> D2["Blocks exfiltration via<br/>email/web/uploads"]
+    
+    E --> E1[Installed on user devices]
+    E1 --> E2["Monitors printers, USB,<br/>clipboard, file transfers"]
+    E2 --> E3[Stops local exfiltration]
 
-  D2 & E3 --> F[Prevent Data Exfiltration & Enforce Policies]
+    D2 --> F[Prevent Data Exfiltration]
+    E3 --> F
 
-classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
-  ```
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,C,F center
+    class B,D,E,D1,D2,E1,E2,E3 node
+```
 
 To further enhance data security, organizations employ marking and labeling techniques. This involves placing easily identifiable labels on assets, both physical and digital, to indicate their security level and handling instructions. For example, a backup tape containing confidential information should have a clear label indicating its sensitivity. Proper labeling not only aids in data protection but also ensures efficient and cost-effective asset handling by eliminating ambiguity about the data's sensitivity.
 
