Revise asset management flowcharts and configurations
Updated flowcharts for asset management processes and clarified the importance of secure configurations and change management.

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -130,18 +130,24 @@ The choice of specific tools depends on the organization's needs and existing in
 
 ```mermaid
 flowchart LR
-  A[Automated Asset Discovery] --> B[Use agents, scanning tools, client software or vendor feeds]
-  B --> C[Gather raw asset data from systems AD, endpoints, cloud, vulnerabilities, licenses]
-  C --> D{Combine data from multiple tools}
-  D --> E[Existing tools like AD, vulnerability scanners, software license managers]
-  D --> F[Cloud vendor feeds and endpoint management systems]
+    A[Automated Asset Discovery] --> B["Use agents, scanning tools,<br/>client software or vendor feeds"]
+    B --> C["Gather raw asset data from AD,<br/>endpoints, cloud, licenses"]
+    C --> D{Combine data from<br/>multiple tools}
+    
+    D --> E["Existing tools (AD, Scanners,<br/>License Managers)"]
+    D --> F["Cloud vendor feeds and<br/>endpoint systems"]
 
-  E & F --> G[Aggregate data into single authoritative System of Record]
-  G --> H[Deduplicate records, resolve conflicts, ensure completeness and accuracy]
-  H --> I[Driven reports, audits, compliance, incident response]
+    E --> G[Aggregate into System of Record]
+    F --> G
+    
+    G --> H["Deduplicate, resolve conflicts,<br/>ensure accuracy"]
+    H --> I["Drive Reports, Audits,<br/>Compliance, IR"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,D,G,I center
+    class B,C,E,F,H node
 ```
 
 Beyond the tools themselves, effective inventory management hinges on well-defined processes. This includes establishing clear guidelines for updating the inventory, including the frequency of updates and procedures for manually notifying the system when assets are added, removed, or significantly modified. In dynamic environments with frequent software deployments and fluctuating endpoint numbers, using automated tools to discover, track, and provision assets is often preferred. 
@@ -233,24 +239,35 @@ Effective asset management involves several key activities:
 4. **Change Management**: Change is inevitable in any IT environment, but uncontrolled change can wreak havoc on your security posture. Change management establishes standardized processes for making modifications to assets, ensuring that all changes are authorized, implemented correctly, and documented thoroughly.
 
 ```mermaid
-flowchart LR
-  A[Start: Effective Asset Management] --> B[Assignment of Ownership]
-  B --> C[IT Asset Management - ITAM]
-  C --> C1[Manage hardware, software, data, processes throughout lifecycle]
-  C1 --> C2[Align with ISO‑19770 standards for consistency & compliance]
-  C --> D[Configuration Management]
-  D --> D1[Document system/software settings thoroughly]
-  D1 --> D2[Define baselines – secure & system]
-  D2 --> D3[Ensure secure configurations are maintained]
-  C --> E[Change Management]
-  E --> E1[Authorize and document modifications to assets/configs]
-  E1 --> E2[Maintain system integrity and prevent misconfiguration]
-  F[Integration] --> A
-  C & D & E --> F[Work together to maintain full lifecycle governance]
-  F --> G[Ensure accountability, security, compliance, and operational stability]
+flowchart TD
+    A[Start: Effective Asset Management] --> B[Assignment of Ownership]
+    B --> C{Core Components}
+
+    subgraph ITAM [IT Asset Management]
+    C --> C_Main[ITAM - ISO 19770]
+    C_Main --> C1["Manage hardware, software, data,<br/>processes throughout lifecycle"]
+    end
+
+    subgraph CM [Configuration Management]
+    C --> D[Configuration Management]
+    D --> D1[Document settings & baselines]
+    D1 --> D2[Ensure secure configurations]
+    end
+
+    subgraph ChangeM [Change Management]
+    C --> E[Change Management]
+    E --> E1[Authorize and document modifications]
+    E1 --> E2[Maintain system integrity]
+    end
+
+    C1 & D2 & E2 --> F[Integration & Lifecycle Governance]
+    F --> G["Accountability, Security,<br/>Compliance, and Stability"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,F,G center
+    class C_Main,C1,D,D1,D2,E,E1,E2 node
 ```
 
 :bulb: Manually checking configurations for hundreds of systems? That's where the **Security Content Automation Protocol (SCAP)** steps in. SCAP allows security products to automatically verify configurations against established baselines, streamlining the process and reducing the risk of human error.
