Update 1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md

--- a/DOMAIN1: Security and Risk Management/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
+++ b/DOMAIN1: Security and Risk Management/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
@@ -1,4 +1,4 @@
-## Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring ##
+## 1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring ##
 
 **1: Preparation & Environment Setup**
 
