Update 1.L.3 Risk Matrix and Risk Register.md

--- a/DOMAIN1: Security and Risk Management/1.L.3 Risk Matrix and Risk Register.md
+++ b/DOMAIN1: Security and Risk Management/1.L.3 Risk Matrix and Risk Register.md
@@ -1,4 +1,4 @@
-## Risk Matrix and Risk Register ##
+## 1.L.3 Risk Matrix and Risk Register ##
 
 A risk matrix and a risk register are two foundational tools in cybersecurity risk management—they serve different but complementary purposes:
 
