Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -1,4 +1,4 @@
-## Hack the Prompt: Windows CLI for Security Beginners ##
+## 1.L.7 Hack the Prompt: Windows CLI for Security Beginners ##
 
 Think the Windows command line is just a boring black box? Think again.
 In this bite-sized course, we’ll turn that blinking cursor into your cybersecurity sidekick.
