Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## 1.Q.2 Hard Questions ##
 
 1. **During the Risk Assessment process, having compiled an inventory of all your assets, you now seek to assess their vulnerabilities. What factors should be considered in this evaluation? (Choose all that apply)**
 
