--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -100,27 +100,29 @@ Respecting data subjects means recognizing their right to privacy and ensuring t
 
 A critical aspect of safeguarding data lies in understanding and managing the data lifecycle, a concept encompassing the journey of data from its creation to its ultimate disposal. This lifecycle, provides a framework for implementing security controls at every stage, minimizing risks, and adhering to legal and ethical obligations.
 
-The image below recap the Data lifecycle:
+The image below recap the Data lifecycle: 
+
 ```mermaid
-flowchart LR
-  A[1. Create / 2. Collect] --> B[Store]
-  B --> C[3. Use]
-  C --> D[4. Share]
-  D --> E[5. Archive]
-  E --> F[6. Destroy]
+flowchart TD
+    A[1. Create / 2. Collect] --> B[Store]
+    B --> C[3. Use]
+    C --> D[4. Share]
+    D --> E[5. Archive]
+    E --> F[6. Destroy]
 
-
-
-  
-  A --- A1[Generation or modification of digital content]
-  B --- B1[Committing data to a storage repository]
-  C --- C1[Viewing or processing data in activities]
-  D --- D1[Making information accessible to others]
-  E --- E1[Transitioning data to long‑term storage]
-  F --- F1[Physically or digitally eliminating data]
+    %% Descriptions linked with dotted lines for better visual flow
+    A -.-> A1["Generation or modification<br/>of digital content"]
+    B -.-> B1["Committing data to a<br/>storage repository"]
+    C -.-> C1["Viewing or processing<br/>data in activities"]
+    D -.-> D1["Making information<br/>accessible to others"]
+    E -.-> E1["Transitioning data to<br/>long-term storage"]
+    F -.-> F1["Physically or digitally<br/>eliminating data"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F center
+    class A1,B1,C1,D1,E1,F1 node
 ```
 
 The data lifecycle begins with **data collection (or data creation)**, which encompasses data creation, acquisition, aggregation, or any instance where data enters an organization's system. This initial phase is where secure defaults, privacy by design, and other security principles are critical. Embedding security measures from the outset, rather than as an afterthought, is a cornerstone of best practices and regulatory requirements. It's also crucial to obtain consent or have a legitimate legal basis for collecting data, as emphasized by regulations like the GDPR.
@@ -228,22 +230,27 @@ When properly leveraged, cloud services can restrict specific data classificatio
 Beyond legal and regulatory compliance, data location significantly impacts disaster recovery and business continuity. Organizations often maintain backups of their critical data at different locations to mitigate risks associated with natural disasters, cyberattacks, or other disruptive events. The geographical distance between the primary data storage and the backup location is a crucial consideration. For example, storing a backup copy in the same building as the primary data center would defeat the purpose of having a backup if a fire or other localized disaster were to occur. Ideally, backup data should be located far enough from the primary site to minimize the likelihood of both locations being affected by the same event. This concept extends to cloud storage, where organizations need to verify the physical location of their cloud backups to ensure they reside in a geographically separate area.
 
 ```mermaid
-flowchart LR
-  A[Primary Data Center] --> B[Backup / DR Sites]
-  B --> C{On premise Backup. Geographical Separation?}
-  C -->|Too Close -e.g. same building-| D[Risk: Both hit by same disaster]
-  C -->|Sufficient distance - e.g. >25‑100 miles| E[Backup safe from same event]
-  E --> F[Improved disaster recovery & continuity]
-  D --> G[Backup compromised during local disaster]
-  G --> H[Continuity failure]
+flowchart TD
+    A[Primary Data Center] --> B[Backup / DR Sites]
+    B --> C{On-premise Backup:<br/>Geographical Separation?}
+    
+    C -->|Too Close| D["Risk: Both hit by same disaster<br/>(e.g., same building)"]
+    C -->|"Sufficient distance<br/>(e.g., >25-100 miles)"| E[Backup safe from same event]
+    
+    E --> F[Improved Disaster Recovery]
+    D --> G[Backup compromised during local disaster]
+    G --> H[Continuity failure]
 
-  B --> I[Cloud backups]
-  I --> J{Verify physical location}
-  J -->|Same region| D
-  J -->|Different region| E
+    B --> I[Cloud Backups]
+    I --> J{Verify physical location}
+    J -->|Same region| D
+    J -->|Different region| E
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,C,J,H center
+    class B,D,E,F,G,I node
 ```
 
 :necktie: Data location considerations should be interwoven into every stage of data management, from initial data classification to cloud architecture design and disaster recovery planning. 
@@ -413,23 +420,28 @@ Data retention policies should address three key questions:
 3. **Where do we keep this data?** The focus here is on the manner in which data is stored and its accessibility for retrieval. Retained data should be easy to locate and retrieve to comply with legal requests or business needs.
 
 ```mermaid
-flowchart LR
-  A[Data Retention Policy] --> B{"What data do we keep?"}
-  B --> B1[Identify data needed for analysis,\nhistorical use, compliance, operations]
-  B1 --> B2[Consult legal counsel for obligations]
+flowchart TD
+    A[Data Retention Policy] --> B{"What data do we keep?"}
+    B --> B1["Identify data for analysis,<br/>history, compliance, operations"]
+    B1 --> B2[Consult legal counsel for obligations]
 
-  A --> C{"How long do we keep it?"}
-  C --> C1[Consider regulatory, statutory,\nbest-practice, and case‑law requirements]
-  C1 --> C2[Define retention periods per data type]
+    A --> C{"How long do we keep it?"}
+    C --> C1["Consider regulatory, statutory,<br/>best-practice, and case-law"]
+    C1 --> C2[Define retention periods per type]
 
-  A --> D{"Where do we keep it?"}
-  D --> D1[Determine data locations and storage methods]
-  D1 --> D2[Ensure easy locate/retrieve capability\nfor legal or business needs]
+    A --> D{"Where do we keep it?"}
+    D --> D1[Determine locations & storage methods]
+    D1 --> D2["Ensure locate/retrieve capability<br/>for legal or business needs"]
 
-  B2 & C2 & D2 --> E[Comprehensive data retention program]
+    B2 --> E[Comprehensive Data Retention Program]
+    C2 --> E
+    D2 --> E
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E center
+    class B1,B2,C1,C2,D1,D2 node
 ```
 
 Effective data retention policies strike a balance between business needs and employee or customer privacy. They should ensure that data is retained deliberately, specifically, and enforceably, with mechanisms for prompt and proper disposal of data that should not be retained. Data retention policies must address the challenges posed by the volume, velocity, variety, veracity, and value of data. Organizations should adopt a retention policy that enables the creation of big data stores as needed while balancing risks, costs, and value. This involves considering privacy, legal liability, e-discovery implications, data usefulness, storage costs, and data removal procedures. 
@@ -454,29 +466,26 @@ E-discovery, the process of producing electronically stored information (ESI) re
 8. Presentation. 
 
 ```mermaid
-flowchart LR
-  A[Identification of Relevant Data] --> B[Preservation of Data]
-  B --> C[Collection of Data]
-  C --> D[Processing of Data]
-  D --> E[Review for Relevance]
-  E --> F[Analysis for Context]
+flowchart TD
+    A[1. Identification] --> B[2. Preservation]
+    B --> C[3. Collection]
+    C --> D[4. Processing]
+    D --> E[5. Review]
+    E --> F[6. Analysis]
 
-  A:::phase
-  B:::phase
-  C:::phase
-  D:::phase
-  E:::phase
-  F:::phase
-  
-  A --- A1[Recognizing data that may be pertinent to the case]
-  B --- B1[Ensuring data is protected from alteration or destruction]
-  C --- C1[Gathering data from various storage locations]
-  D --- D1[Formatting data and metadata correctly]
-  E --- E1[Evaluating data for its importance to the case]
-  F --- F1[Understanding the context and meaning of the data]
+    %% Descriptions using dotted lines for cleaner visual hierarchy
+    A -.-> A1["Recognizing data pertinent<br/>to the case"]
+    B -.-> B1["Protecting data from<br/>alteration or destruction"]
+    C -.-> C1["Gathering data from<br/>storage locations"]
+    D -.-> D1["Formatting data and<br/>metadata correctly"]
+    E -.-> E1["Evaluating importance<br/>to the case"]
+    F -.-> F1["Understanding context<br/>and meaning"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F center
+    class A1,B1,C1,D1,E1,F1 node
 ```
 
 Regulations such as the Federal Information Security Management Act (FISMA) and the Health Insurance Portability and Accountability Act (HIPAA) impose specific data retention requirements. FISMA, through NIST SP 800-53, mandates a minimum retention period of three years for federal agencies and government contractors. HIPAA requires covered entities to retain HIPAA-related data for at least six years from creation. The General Data Protection Regulation (GDPR) emphasizes data minimization, requiring organizations to retain personal data only as long as necessary to fulfill the original purpose of collection.
