Update 2.05 Ensure appropriate asset retention.md

--- a/DOMAIN2: Asset Security/2.05 Ensure appropriate asset retention.md
+++ b/DOMAIN2: Asset Security/2.05 Ensure appropriate asset retention.md
@@ -15,26 +15,34 @@ One of the most powerful tools in an organization's asset retention arsenal is a
 
 ```mermaid
 flowchart TB
-  A[Retention Policy Roadmap] --> B[Purpose & Scope]
-  A --> C[Legal & Regulatory Alignment]
-  A --> D[Data Categorization & Retention Schedules]
-  A --> E[Secure Handling & Destruction]
-  A --> F[Litigation Exception Process]
-  A --> G[Roles & Responsibilities]
-  A --> H[Training & Awareness]
-  A --> I[Regular Review & Updates]
+    A["<b>Retention Policy Roadmap</b>"]
 
-  B --- B1[Defines objectives and what data/systems are covered]
-  C --- C1[Ensures compliance with laws and industry rules]
-  D --- D1[Sets retention periods per data type]
-  E --- E1[Mandates secure data management and destruction procedures]
-  F --- F1[Outlines handling during litigation or e-discovery]
-  G --- G1[Assigns responsibility to individuals or teams]
-  H --- H1[Educates employees on policy requirements]
-  I --- I1[Schedules periodic review and adaptation]
-  
+    subgraph Strategy [1. Strategy & Compliance]
+    B[Purpose & Scope] --- B1["Defines objectives and<br/>systems covered"]
+    C[Legal & Regulatory Alignment] --- C1["Ensures compliance with<br/>laws and rules"]
+    end
+
+    subgraph Operations [2. Data Operations]
+    D[Data Categorization] --- D1["Sets retention periods<br/>per data type"]
+    E[Secure Handling] --- E1["Mandates secure management<br/>and destruction"]
+    F[Litigation Exception] --- F1["Outlines handling during<br/>litigation (Legal Hold)"]
+    end
+
+    subgraph Governance [3. Lifecycle & Training]
+    G[Roles & Responsibilities] --- G1["Assigns responsibility to<br/>individuals or teams"]
+    H[Training & Awareness] --- H1["Educates employees on<br/>policy requirements"]
+    I[Regular Review] --- I1["Schedules periodic review<br/>and adaptation"]
+    end
+
+    A --> Strategy
+    A --> Operations
+    A --> Governance
+
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F,G,H,I center
+    class B1,C1,D1,E1,F1,G1,H1,I1 node
 ```
 
 A well-defined retention policy offers numerous advantages:
