Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -118,22 +118,30 @@ As a security expert, you play a crucial role in ensuring that security controls
 **Tailoring**, on the other hand, focuses on modifying the implementation of controls to align with the organization's specific requirements. This might involve adjusting the control's parameters or substituting it with a compensating control that achieves a similar security outcome. Imagine an organization with a central office and a remote site. The baseline control set might work perfectly for the central office but prove impractical for the remote location. Tailoring allows for adjustments, such as implementing compensating controls, to address the unique circumstances of the remote site.
 
 ```mermaid
-flowchart TB
-  A[Security Control Baseline] --> B[Scoping]
-  B --> B1[Identify applicable controls based on system characteristics]
-  B --> B2[Remove irrelevant or redundant controls]
-  B --> B3[Document justification for omitted controls]
+flowchart TD
+    A[Security Control Baseline] --> B{Scoping}
+    A --> C{Tailoring}
 
-  A --> C[Tailoring]
-  C --> C2[Adjust control parameters to fit environment]
-  C --> C3[Add compensating controls if needed]
-  C --> C4[Document tailored control specifications]
+    subgraph Scoping_Process [Scoping Activities]
+    B --> B1["Identify applicable controls<br/>(System Characteristics)"]
+    B --> B2[Remove irrelevant/redundant controls]
+    B --> B3[Document justifications for omission]
+    end
 
-  B1 & B2 & B3 --> C1[Apply scoping outcomes]
-  C4 --> D[Tailored & Justified Control Set]
+    subgraph Tailoring_Process [Tailoring Activities]
+    C --> C2[Adjust parameters to fit environment]
+    C --> C3[Add compensating controls]
+    C --> C4[Document tailored specifications]
+    end
+
+    B1 & B2 & B3 --> D[Tailored & Justified Control Set]
+    C2 & C3 & C4 --> D
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D center
+    class B1,B2,B3,C2,C3,C4 node
 ```
 
 Scoping and tailoring work hand in hand, first identifying relevant controls and then fine-tuning their implementation.
