Update 2.Q.1 Easy Questions.md

--- a/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
@@ -1,4 +1,4 @@
-## Easy Questions ##
+## 2.Q.1 Easy Questions ##
 
 1. As a healthcare organization transitions to digital health technologies, including connected medical devices and electronic health record systems, the IT security team is responsible for ensuring the secure integration and management of these new assets. Which of the following actions is most critical to safeguard these assets and maintain patient data security?
 
