Update 2.Q.2 Hard Questions.md

--- a/DOMAIN2: Asset Security/2.Q.2 Hard Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## 2.Q.2 Hard Questions ##
 
 1. You are tasked with classifying company assets in terms of sensitivity and importance. Which factor is the most important when determining the classification of an asset?
 
