Update 2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md

--- a/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
+++ b/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
@@ -16,44 +16,34 @@ Finally, managing change is not just about process — it’s about **protection
 
 ```mermaid
 
-flowchart LR
-    A[🛠️ Configuration Management] --> B[🎯 Purpose]
-    B --> B1[Maintain security & operational integrity]
-    B --> B2[Ensure compliance with standards]
-    B --> B3[Prevent unauthorized or accidental changes]
+flowchart TD
+    A["🛠️ <b>Configuration Management</b>"]
 
-    A --> C[📦 Standardization]
-    C --> C1[Use approved templates & images]
-    C --> C2[Cover servers, devices, network & mobile]
-    C --> C3[Review & update regularly]
+    subgraph Governance ["1. Strategy & Control"]
+    B[🎯 Purpose] --- B_txt["Maintain integrity,<br/>compliance, & stability"]
+    E[🔄 Change Control] --- E_txt["Plan, test, & approve<br/>all modifications"]
+    end
 
-    A --> D[📊 Baseline Configurations]
-    D --> D1[Define secure approved settings]
-    D --> D2[Document & version control via CMDB]
-    D --> D3[Monitor to prevent configuration drift]
+    subgraph Setup ["2. Standardization & Hardening"]
+    C[📦 Standardization] --- C_txt["Approved templates<br/>for all devices"]
+    G[🧱 System Hardening] --- G_txt["Disable services &<br/>change defaults"]
+    end
 
-    A --> E[🔄 Change Control]
-    E --> E1[Plan, test & approve all modifications]
-    E --> E2[Assess risk before deployment]
-    E --> E3[Keep detailed documentation]
+    subgraph Ops ["3. Baselines & Access"]
+    D[📊 Baselines] --- D_txt["Define settings &<br/>monitor for drift"]
+    F[🔐 Access Control] --- F_txt["Limit admins & use<br/>JIT privileges"]
+    end
 
-    A --> F[🔐 Access Control]
-    F --> F1[Limit admin accounts]
-    F --> F2[Disable insecure accounts - e.g. guest]
-    F --> F3[Use Just-In-Time -JIT- privileges]
-    F --> F4[Log privileged activity for audits]
+    H["🏁 <b>Outcome</b>"] --> H_txt["Stable environment &<br/>reduced vulnerabilities"]
 
-    A --> G[🧱 System Hardening]
-    G --> G1[Disable unnecessary services & software]
-    G --> G2[Change default passwords]
-    G --> G3[Enforce auto-logoff after inactivity]
-    G --> G4[Conduct audits & inventories for compliance]
-
-    A --> H[🧩 Outcome]
-    H --> H1[Stable & secure IT environment]
-    H --> H2[Reduced vulnerabilities]
-    H --> H3[Improved operational consistency]
+    A --> Governance
+    A --> Setup
+    A --> Ops
+    Governance & Setup & Ops --> H
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F,G,H center
+    class B_txt,C_txt,D_txt,E_txt,F_txt,G_txt,H_txt node
 ```
