Update 2.D.2 Mobile wallets (e.g., Apple Pay, Google Pay): tokenization in action.md

--- a/DOMAIN2: Asset Security/2.D.2 Mobile wallets (e.g., Apple Pay, Google Pay): tokenization in action.md
+++ b/DOMAIN2: Asset Security/2.D.2 Mobile wallets (e.g., Apple Pay, Google Pay): tokenization in action.md
@@ -19,21 +19,21 @@ From now on, every transaction from that device uses the token, not your real ca
 
 ```mermaid
 sequenceDiagram
-    participant Cardholder
-    participant XPay_Wallet as X-Pay Wallet (App)
-    participant TSP as Token Service Provider (VTS/MDES)
-    participant Token_Vault as Token Vault
-    participant Issuer_Bank as Issuer Bank
+    autonumber
+    participant C as Cardholder
+    participant W as X-Pay Wallet (App)
+    participant TSP as Token Service Provider
+    participant TV as Token Vault
+    participant IB as Issuer Bank
 
-    Cardholder->>XPay_Wallet: Enter card details (FPAN)
-    XPay_Wallet->>TSP: Request tokenization (send encrypted FPAN)
-    TSP->>Issuer_Bank: Verify card & authenticate user (OTP / App)
-    Issuer_Bank-->>TSP: Validation OK
-    TSP->>Token_Vault: Store mapping (FPAN ↔ DPAN)
-    Token_Vault-->>TSP: Mapping stored
-    TSP-->>XPay_Wallet: Return DPAN (token)
-    XPay_Wallet-->>Cardholder: Card added successfully (token active)
-
+    C->>W: Enter card details (FPAN)
+    W->>TSP: Request tokenization (Encrypted FPAN)
+    TSP->>IB: Verify card & authenticate (OTP/App)
+    IB-->>TSP: Validation OK
+    TSP->>TV: Store mapping (FPAN <-> DPAN)
+    TV-->>TSP: Mapping stored
+    TSP-->>W: Return DPAN (Token)
+    W-->>C: Card added successfully
 
 ```
 
@@ -55,23 +55,21 @@ When you make a contactless or online payment:
 
 ```mermaid
 sequenceDiagram
-    participant Customer_Device as Wallet (Device with Token)
-    participant Merchant_POS as Merchant POS
+    autonumber
+    participant D as Wallet (Device)
+    participant POS as Merchant POS
     participant TSP as Token Service Provider
-    participant Token_Vault as Token Vault
-    participant Issuer_Bank as Issuer Bank
+    participant TV as Token Vault
+    participant IB as Issuer Bank
 
-    Customer_Device->>Merchant_POS: Send DPAN + cryptogram
-    Merchant_POS->>TSP: Forward tokenized transaction
-    TSP->>Token_Vault: Retrieve FPAN for DPAN
-    Token_Vault-->>TSP: Return FPAN
-    TSP->>Issuer_Bank: Request authorization (with FPAN)
-    Issuer_Bank-->>TSP: Approve / Decline
-    TSP-->>Merchant_POS: Send authorization result
-    Merchant_POS-->>Customer_Device: Payment complete
-
-
-
+    D->>POS: Send DPAN + Cryptogram
+    POS->>TSP: Forward tokenized transaction
+    TSP->>TV: Request FPAN for DPAN
+    TV-->>TSP: Return FPAN
+    TSP->>IB: Request authorization (FPAN)
+    IB-->>TSP: Approve / Decline
+    TSP-->>POS: Send Auth Result
+    POS-->>D: Payment Complete
 ```
 
 🔐 Why Tokenization Is Powerful
