--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -20,33 +20,31 @@ Security should be considered at every stage: design, development, testing, impl
 
 ```mermaid
 flowchart TD
-    A[ISO/IEC 19249 Architectural Principles]
+    A["<b>ISO/IEC 19249 Architectural Principles</b>"]
 
-    A --> B[Domain Separation]
-    B --> B1[Group components with similar security attributes]
-    B --> B2[Control communication strictly between domains]
+    subgraph P1 ["1. Isolation & Hierarchy"]
+    B[Domain Separation] --- B1["Group similar attributes &<br/>strict inter-domain control"]
+    C[Layering] --- C1["Structure levels to prevent<br/>security bypass"]
+    end
 
-    A --> C[Layering]
-    C --> C1[Structure system in levels]
-    C --> C2[Each level enforces its own security policies]
-    C --> C3[Prevent bypassing lower layer security]
+    subgraph P2 ["2. Data & Resource Management"]
+    D[Encapsulation] --- D1["Restrict direct access;<br/>use secure interfaces"]
+    F[Virtualization] --- F1["Abstract resources via<br/>VMs and Containers"]
+    end
 
-    A --> D[Encapsulation]
-    D --> D1[Restrict direct access to components]
-    D --> D2[Interactions via defined secure interfaces]
+    subgraph P3 ["3. Availability"]
+    E[Redundancy] --- E1["Duplicate components<br/>(RAID, HA Clusters)"]
+    end
 
-    A --> E[Redundancy]
-    E --> E1[Duplicate critical components]
-    E --> E2[Ensure availability and integrity]
-    E --> E3[Examples: RAID, high-availability clusters]
-
-    A --> F[Virtualization]
-    F --> F1[Abstract physical resources]
-    F --> F2[Enhance security, scalability, efficiency]
-    F --> F3[Examples: VMs, containers]
+    A --> P1
+    A --> P2
+    A --> P3
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F center
+    class B1,C1,D1,E1,F1 node
 ```
 
 In addition to architectural principles, ISO/IEC 19249 also defines five design principles:
