Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -61,32 +61,31 @@ In addition to architectural principles, ISO/IEC 19249 also defines five design 
 
 ```mermaid
 flowchart TD
-    A[ISO/IEC 19249 Design Principles]
+    A["<b>ISO/IEC 19249 Design Principles</b>"]
 
-    A --> B[Least Privilege]
-    B --> B1[Grant minimum necessary access]
-    B --> B2[Access limited to shortest needed time]
+    subgraph D1 ["1. Access & Surface Control"]
+    B[Least Privilege] --- B_txt["Grant minimum access<br/>for shortest time"]
+    C[Surface Minimization] --- C_txt["Reduce entry points &<br/>disable unnecessary services"]
+    end
 
-    A --> C[Attack Surface Minimization]
-    C --> C1[Reduce potential attacker entry points]
-    C --> C2[Disable unnecessary services]
-    C --> C3[Simplify system functions]
+    subgraph D2 ["2. Centralized Security"]
+    D[Parameter Validation] --- D_txt["Check all inputs to prevent<br/>vulnerabilities (e.g. SQLi)"]
+    E[General Services] --- E_txt["Consolidate Auth, Access Control,<br/>and Cryptography"]
+    end
 
-    A --> D[Centralized Parameter Validation]
-    D --> D1[Check all inputs properly]
-    D --> D2[Prevent vulnerabilities - e.g., SQL injection]
+    subgraph D3 ["3. Resiliency"]
+    F[Error & Exception Handling] --- F_txt["Log errors securely without<br/>exposing sensitive info"]
+    end
 
-    A --> E[Centralized General Security Services]
-    E --> E1[Consolidate security functions]
-    E --> E2[Improve efficiency and consistency]
-    E --> E3[Includes authentication, access control, crypto]
-
-    A --> F[Error and Exception Handling]
-    F --> F1[Detect and log errors securely]
-    F --> F2[Handle errors without exposing sensitive info]
+    A --> D1
+    A --> D2
+    A --> D3
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+    class A,B,C,D,E,F center
+    class B_txt,C_txt,D_txt,E_txt,F_txt node
 ```
 
 A well-designed security architecture incorporates these principles to balance security and functionality. By embedding security early in the system lifecycle and continuously updating it, organizations can protect their assets while maintaining operational efficiency.
